Let WheelEvent wrap a PlatformWheelEvent https://bugs.webkit.org/show_bug.cgi?id=135244

When WheelEvent is initialized with a PlatformWheelEvent, store that PlatformWheelEvent for future use.

Patch by Wenson Hsieh <wenson_hsieh@apple.com> on 2014-07-24
Reviewed by Beth Dakin.

No new tests because behavior should not have changed.

* dom/WheelEvent.cpp: Added method to access the PlatformWheelEvent.
(WebCore::WheelEvent::WheelEvent):
* dom/WheelEvent.h: Added field to store PlatformWheelEvent, if initialized via PlatformWheelEvent.
(WebCore::WheelEvent::wheelEvent):

Canonical link: https://commits.webkit.org/153153@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@171531 268f45cc-cd09-0410-ab3c-d52691b4dbfc